feat: HAVING, self-join alias, USING, UNION/INTERSECT/EXCEPT, code review fixes
- HAVING clause on GroupBy (Having extends Orderable)
- Self-join table alias (from/join with alias parameter)
- USING clause on Join
- UNION/INTERSECT/EXCEPT via TerminalClause (Union extends Orderable)
- Fix Condition.colEq() returning new Condition() instead of this
- Remove stray System.out.println from integration test
- 17 new tests (QueryBuilderTest +15, QueryBuilderIntegrationTest +2)
- Replaces all previous TODOs for these features